# fastapi-user-auth

./: .flake8  .gitignore  .pre-commit-config.yaml  README.md  README.zh.md  pyproject.toml
.github/workflows/: pytest.yml  python-publish.yml
fastapi_user_auth/: __init__.py  actions.py  admin.py  app.py  site.py  utils.py
fastapi_user_auth/admin/: __init__.py  actions.py  admin.py  app.py  site.py  utils.py
fastapi_user_auth/auth/: __init__.py  auth.py  crud.py  exceptions.py  model.conf  models.py  schemas.py  sqlachemy_adapter.py
fastapi_user_auth/auth/backends/: base.py  db.py  jwt.py  redis.py
fastapi_user_auth/globals/: __init__.py  _sites.py  core.py  deps.py
fastapi_user_auth/locale/zh_CN/LC_MESSAGES/: messages.mo  messages.po
fastapi_user_auth/mixins/: admin.py  models.py  schemas.py
fastapi_user_auth/utils/: casbin.py  sqlachemy_adapter.py  sqltypes.py
tests/: conftest.py  test_utils.py
tests/test_admin/: test_utils.py
tests/test_auth/: conftest.py  db.py  main.py  test_auth.py  test_auth_mount.py  test_auth_requires.py  test_auth_router.py  test_auth_user_model.py  test_backend.py  test_casbin.py
tests/test_mixins/: admin.py
