[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "fastapi_user_auth"
authors = [
    { name = "Atomi", email = "1456417373@qq.com" },
]
maintainers = [
    { name = "Atomi", email = "1456417373@qq.com" },
]
description = "FastAPI-User-Auth is a simple and powerful FastAPI user RBAC authentication and authorization library. Based on FastAPI-Amis-Admin and provides a freely extensible visual management interface."
readme = "README.md"
requires-python = ">=3.7"
dynamic = ["version"]
keywords = [
    "fastapi",
    "fastapi-user-auth",
    "fastapi-amis-admin",
    "fastapi-auth",
    "fastapi-users",
    "fastapi-jwt-auth",
    "sqlmodel",
]
classifiers = [
    "Framework :: FastAPI",
    "Environment :: Web Environment",
    "Topic :: System :: Systems Administration",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
]
dependencies = [
    "pydantic>=1.9",
    "fastapi-amis-admin>=0.0.21",
    "email-validator",
    "passlib",
    "bcrypt",
]



[project.urls]
Documentation = "http://docs.amis.work/"
Source = "https://github.com/amisadmin/fastapi_user_auth"
FastAPI-Amis-Admin = "https://github.com/amisadmin/fastapi_amis_admin"

[project.optional-dependencies]
test = [
    "pytest >=6.2.4,<7.0.0",
    "pytest-asyncio",
    "aiosqlite",
    "jose==1.0.0",
    "python-jose==3.3.0",
]
jwt = [
    "jose==1.0.0",
    "python-jose==3.3.0",
]
redis = ["aioredis"]
db = []
dev = [
    "jinja2 >=2.11.2,<4.0.0",
    "aiosqlite",
    "aioredis",
    "uvicorn[standard] >=0.12.0,<0.16.0",
]
all = [
    "jinja2 >=2.11.2,<4.0.0",
    "uvicorn[standard] >=0.12.0,<0.16.0",
]