[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "fastapi_user_auth"
authors = [
    { name = "Atomi", email = "1456417373@qq.com" },
]
maintainers = [
    { name = "Atomi", email = "1456417373@qq.com" },
]
description = "FastAPI-User-Auth is a simple and powerful FastAPI user RBAC authentication and authorization library. Based on FastAPI-Amis-Admin and provides a freely extensible visual management interface."
readme = "README.md"
requires-python = ">=3.7"
dynamic = ["version"]
keywords = [
    "fastapi",
    "fastapi-user-auth",
    "fastapi-amis-admin",
    "fastapi-auth",
    "fastapi-users",
    "fastapi-jwt-auth",
    "sqlmodel",
]
classifiers = [
    "Framework :: FastAPI",
    "Environment :: Web Environment",
    "Topic :: System :: Systems Administration",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
]
dependencies = [
    "pydantic>=1.9",
    "fastapi-amis-admin>=0.2.4,<0.3.0",
    "email-validator",
    "passlib>=1.7.4",
    "bcrypt>=4.0.0",
    "sqlmodelx>=0.0.2",
    "sqlalchemy-database>=0.0.10",
]



[project.urls]
Documentation = "http://docs.amis.work/"
Source = "https://github.com/amisadmin/fastapi_user_auth"
FastAPI-Amis-Admin = "https://github.com/amisadmin/fastapi_amis_admin"

[project.optional-dependencies]
test = [
    "pytest >=6.2.4,<7.0.0",
    "pytest-asyncio>=0.17",
    "aiosqlite",
    "jose==1.0.0",
    "python-jose==3.3.0",
]
jwt = [
    "jose==1.0.0",
    "python-jose==3.3.0",
]
redis = ["aioredis"]
db = []
dev = [
    "jinja2 >=2.11.2,<4.0.0",
    "aiosqlite",
    "aioredis",
    "uvicorn[standard] >=0.12.0,<0.16.0",
    "pre-commit>=2.20.0",
]
all = [
    "jinja2 >=2.11.2,<4.0.0",
    "uvicorn[standard] >=0.12.0,<0.16.0",
    "ujson>=5.5.0",
]
# pytest
[tool.pytest.ini_options]
minversion = "6.0"
testpaths = [
    "tests",
]
# pytest-asyncio
asyncio_mode = "auto"
filterwarnings = [
    "ignore::RuntimeWarning",
]
[tool.isort]
profile = "black"
atomic = true
filter_files = true

[tool.black]
line-length = 130
include = '\.pyi?$'
[tool.pdm.scripts]
lint = "pre-commit run --all-files"
test = "pytest"
[tool.pdm.dev-dependencies]
