[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "fastapi_user_auth"
authors = [
    { name = "Atomi", email = "1456417373@qq.com" },
]
maintainers = [
    { name = "Atomi", email = "1456417373@qq.com" },
]
description = "FastAPI-User-Auth is a simple and powerful FastAPI user RBAC authentication and authorization library. Based on FastAPI-Amis-Admin and provides a freely extensible visual management interface."
readme = "README.md"
requires-python = ">=3.8"
dynamic = ["version"]
keywords = [
    "fastapi",
    "fastapi-user-auth",
    "fastapi-amis-admin",
    "fastapi-auth",
    "fastapi-users",
    "fastapi-jwt-auth",
    "sqlmodel",
]
classifiers = [
    "Framework :: FastAPI",
    "Environment :: Web Environment",
    "Topic :: System :: Systems Administration",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "fastapi-amis-admin>=0.7.0,<0.8.0",
    "email-validator>=1.3.1,<3.0.0",
    "passlib>=1.7.4",
    "bcrypt>=4.0.0,<4.1.0",
    "casbin>=1.29.0",
]

[project.urls]
Documentation = "http://docs.amis.work/"
Source = "https://github.com/amisadmin/fastapi_user_auth"
FastAPI-Amis-Admin = "https://github.com/amisadmin/fastapi_amis_admin"

[project.optional-dependencies]
jwt = [
    "python-jose>=3.3.0",
]
redis = ["redis>=4.2.0"]
test = [
    "uvicorn[standard] >=0.19.0,<1.0",
    "pytest >=6.2.4",
    "pytest-asyncio>=0.17,<0.23.0",
    "aiosqlite>=0.15.0",
    "python-jose>=3.3.0",
    "jinja2 >=2.11.2,<4.0.0",
    "ujson>=5.5.0",
    "requests>=2.28.1",
    "pre-commit>=2.20.0",
    "httpx>=0.23.3",
    "pydantic-settings>=2.0.0",
    "fastapi-amis-admin>=0.7.0",
    "sqlmodelx>=0.0.9",
]

# pytest
[tool.pytest.ini_options]
minversion = "6.0"
testpaths = [
    "tests",
]
# pytest-asyncio
asyncio_mode = "auto"
#filterwarnings = [
#    "ignore::RuntimeWarning",
#]
[tool.isort]
profile = "black"
atomic = true
filter_files = true

[tool.black]
line-length = 130
include = '\.pyi?$'

[tool.ruff]
select = [
    "E", # pycodestyle errors
    "W", # pycodestyle warnings
    "F", # pyflakes
    "I", # isort
    "C", # flake8-comprehensions
    "B", # flake8-bugbear
]
ignore = [
    "E501", # line too long
    "B008", # do not perform function calls in argument defaults
    "C901", # too complex
    "E711", # comparison to None should be 'if cond is None:';sqlalchemy is not support.
    "E712", # comparison to True should be 'if cond is True:' or 'if cond:'
]
# Same as Black.
line-length = 130

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]


[tool.pdm.scripts]
lint = "pre-commit run --all-files"
test = "pytest"
[tool.pdm.dev-dependencies]
